<resources>
    <string name="app_name">Scouter App</string>
    <string name="auto">AUTO</string>
    <string name="button">Button</string>
    <string name="titleauto">Auto</string>
    <string name="docked_engaged">Docked + Engaged</string>
    <string name="left_community">Left Community</string>
    <string name="page_2">Page 2</string>
    <string name="scouter_app">Scouter App</string>
    <string name="match_number">Match Number</string>
    <string name="_75">75</string>
    <string name="ex_75">EX: 75</string>
    <string name="team_number">Team Number</string>
    <string name="ex_1">Ex: 1</string>
    <string name="driver_station">Driver Station</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="r">R</string>
    <string name="page_1">Page 1</string>
    <string name="right">Right</string>
    <string name="middle">Middle</string>
    <string name="left">Left</string>
    <string name="Right">Right</string>
    <string name="greyed_our_arrow">Greyed_our_arrow</string>
    <string name="climbing_time">Climbing Time</string>
    <string name="engaged">Engaged</string>
    <string name="docked">Docked</string>
    <string name="assisted">Assisted</string>
    <string name="start">Start</string>
    <string name="uhh">\"Finish!!\"</string>
    <string name="alliance">Alliance</string>
    <string name="random1">!</string>
    <string name="reset">Reset</string>
    <string name="tele_op">Tele-OP</string>
    <string name="ground">Ground</string>
    <string name="cone_pickup">Cone Pickup</string>
    <string name="cube_pickup">Cube Pickup</string>
    <string name="station">Station</string>
    <string name="cycle_timer">Cycle Timer</string>
    <string name="page_3">Page 3</string>
    <string name="tele_op2">Tele-Op</string>
    <string name="disabled">Disabled</string>
    <string name="disqualified">Disqualified</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="end_notes">End Notes</string>
    <string name="page_5">Page 5</string>
    <string name="ex_the_robot_stopped">Ex:the robot stopped</string>
    <string name="additional_notes">Additional Notes:</string>
    <string name="ex_the_robot_stopped_2">Ex:the robot stopped</string>
    <string name="additional_notes_2">Additional Notes:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="aggression_of_the_robot">Aggression Of The Robot</string>
    <string name="defense_capability">Defense Capability</string>
    <string name="win">Win?</string>
    <string name="qr">QR</string>
    <string name="page_6">Page 6</string>
    <string name="x">X</string>
    <string name="gave_assistance">Gave Assistance</string>
    <string name="received_assistance">Received Assistance</string>
    <string name="page_4">Page 4</string>
    <string name="_00_00">00:00</string>
    <string name="autonomous">Autonomous</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="end_game">End Game</string>
    <string name="attempted">Attempted</string>
    <string name="solo_climb">Solo Climb</string>
    <string name="parked">Parked</string>
    <string name="todo">TODO</string>
    <string name="stop">Stop</string>
    <string name="_0">0</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="d_e_time">D/E Time</string>
</resources>