<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="134dp"
    tools:layout_editor_absoluteY="1dp">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/top_rect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:text="@string/end_notes"
        android:textColor="#FFFFFF"
        android:textSize="75sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="610dp"
        android:layout_height="94dp"
        android:background="@drawable/bottom_rect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="157dp"
        android:layout_height="83dp"
        android:layout_marginStart="222dp"
        android:text="@string/page_5"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Forward_page_4"
        android:layout_width="55dp"
        android:layout_height="61dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/triangleforward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Backward_page_4"
        android:layout_width="55dp"
        android:layout_height="61dp"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/triangleforward"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginTop="592dp"
        android:autofillHints="EX: The robot stopped"
        android:ems="10"
        android:hint="@string/ex_the_robot_stopped_2"
        android:inputType="textPersonName"
        android:text="@string/additional_notes_2"
        android:textColor="#0000FF"
        android:textColorHint="#0000ff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar2"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="546dp"
        android:layout_height="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="16dp"
        android:max="4"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="197dp"
        android:text="@string/_1"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="197dp"
        android:text="@string/_2"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="197dp"
        android:text="@string/_3"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="163dp"
        android:text="@string/_4"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/line5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="36dp"
        android:text="@string/_5"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/additional_notes"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginTop="592dp"
        android:autofillHints="EX: The robot stops"
        android:ems="10"
        android:hint="@string/ex_the_robot_stopped"
        android:inputType="textPersonName"
        android:text="@string/additional_notes"
        android:textColor="#0000FF"
        android:textColorHint="#0000ff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="546dp"
        android:layout_height="135dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="16dp"
        android:max="4"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/aggression_of_the_robot"
        android:textColor="#0000FF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="154dp"
        android:text="@string/defense_capability"
        android:textColor="#0000FF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/line21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="384dp"
        android:text="@string/_1"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/line22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="384dp"
        android:text="@string/_2"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/line23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="197dp"
        android:text="@string/_3"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/line24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="384dp"
        android:text="@string/_3"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="163dp"
        android:text="@string/_4"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="163dp"
        android:text="@string/_4"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="36dp"
        android:text="@string/_5"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="36dp"
        android:text="@string/_5"
        android:textColor="#0000ff"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/yescheckBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="749dp"
        android:background="@drawable/smaller_rect_field"
        android:text="@string/yes"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/yescheckBox2"
        android:layout_width="268dp"
        android:layout_height="59dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="530dp"
        android:background="@drawable/smaller_rect_field"
        android:text="@string/disabled"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/nocheckBox3"
        android:layout_width="146dp"
        android:layout_height="64dp"
        android:layout_marginTop="748dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/smaller_rect_field"
        android:text="@string/no"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/nocheckBox"
        android:layout_width="297dp"
        android:layout_height="61dp"
        android:layout_marginTop="528dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/smaller_rect_field"
        android:text="@string/disqualified"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="749dp"
        android:text="@string/win"
        android:textColor="#0000ff"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>